--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:1000px" src="./resources/arch.png"/>
 					</center>
 				</td>
 			</tr>
