--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    <a href="./cite.txt"> Bibtex </a>
+                    <a href="./resources/cite.txt"> Bibtex </a>
                   </span>
                 </center>
               </td>
@@ -274,7 +274,7 @@
           <div class="container">
 	    <div class="row">
 	      <center>
-	        <img src="./images/arch.png" alt="alt text" style="width: 100%; object-fit: cover; max-width:100%;"></a>
+	        <img src="./resources/arch.png" alt="alt text" style="width: 100%; object-fit: cover; max-width:100%;"></a>
 	      </center>
 	      </div>
         </center>
