--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    <a href="./resources/cite.txt"> Bibtex </a>
+                    <a href="./resources/bibtex.txt"> Bibtex </a>
                   </span>
                 </center>
               </td>
