--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="container">
 	    <div class="row">
 	      <center>
-	        <img src="./resources/arch.png" alt="alt text" style="width: 100%; object-fit: cover; max-width:100%;"></a>
+	        <img src="./resources/arch.jpg" alt="alt text" style="width: 100%; object-fit: cover; max-width:100%;"></a>
 	      </center>
 	      </div>
         </center>
