--- a/index.html
+++ b/index.html
@@ -297,19 +297,19 @@
 	
        <center><h1>Results</h1></center>
 
-       <p><b> Closed-Set Action Recognition: Ablation Study (left) and Comparison to SOTA (right) </b> </p>
-       <p><img class="center"  src="./images/ablation.PNG" width="800px"></p>
+       <p><b> Any-shot Class-agnostic Counting Result on FSC-147 Dataset </b> </p>
+       <p><img class="center"  src="./resources/FSC147.PNG" width="800px"></p>
 	
 	
-       <p><b> Few-Shot Action Recognition (left) and Open-Set Action Recognition (right) </b> </p>
-       <p><img class="center"  src="./images/few_open.PNG" width="800px"></p>
+       <p><b> Any-shot Class-agnostic Counting Result on Val-COCO and Test-COCO Dataset </b> </p>
+       <p><img class="center"  src="./resources/FSCOCO.PNG" width="800px"></p>
 	
 
-       <p><b> Closed-Set Action Localisation Results </b> </p>
-       <p><img class="center"  src="./images/detection.PNG" width="800px"></p>	
+       <p><b> Few-shot Class-specific Counting Result on CARPK Dataset </b> </p>
+       <p><img class="center"  src="./resources/CARPK.PNG" width="800px"></p>	
 	
-	<p><b> Text-Video Retrieval Results </b> </p>
-       <p><img class="center"  src="./images/retrieval.PNG" width="800px"></p>
+	<p><b> Ablation Study Result </b> </p>
+       <p><img class="center"  src="./resources/ablation.PNG" width="800px"></p>
 	
 	<br><hr>
 	<center><h1>Dataset Splits</h1></center>
