--- a/index.html
+++ b/index.html
@@ -298,18 +298,18 @@
        <center><h1>Results</h1></center>
 
        <p><b> Any-shot Class-agnostic Counting Result on FSC-147 Dataset </b> </p>
-       <p><img class="center"  src="./resources/FSC147.PNG" width="800px"></p>
+       <p><img class="center"  src="./resources/FSC147.png" width="800px"></p>
 	
 	
        <p><b> Any-shot Class-agnostic Counting Result on Val-COCO and Test-COCO Dataset </b> </p>
-       <p><img class="center"  src="./resources/FSCOCO.PNG" width="800px"></p>
+       <p><img class="center"  src="./resources/FSCOCO.png" width="800px"></p>
 	
 
        <p><b> Few-shot Class-specific Counting Result on CARPK Dataset </b> </p>
-       <p><img class="center"  src="./resources/CARPK.PNG" width="800px"></p>	
+       <p><img class="center"  src="./resources/CARPK.png" width="800px"></p>	
 	
 	<p><b> Ablation Study Result </b> </p>
-       <p><img class="center"  src="./resources/ablation.PNG" width="800px"></p>
+       <p><img class="center"  src="./resources/ablation.png" width="800px"></p>
 	
 	<br><hr>
 	<center><h1>Dataset Splits</h1></center>
