--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
 	<br><hr>
       <center> <h1> Acknowledgements </h1> </center>
 	<p>
-		This research is supported by the National Key Research and Development Program of China (No. 2020YFB1406801), 111 plan (No. BP0719010), STCSM (No. 18DZ2270700), State Key Laboratory of UHD Video and Audio Production and Presentation.
-		Tengda Han is supported by a Google-DeepMind Graduate Scholarship. Weidi Xie is supported by the UK EPSRC Programme Grant Visual AI (EP/T028572/1). He would like to acknowledge the generous support of Yimeng Long and Yike Xie in enabling his contribution.
+	We thank Xiaoman Zhang and Chaoyi Wu for proof-reading.	
 	</p>
   
       <p style="text-align:left;font-size:9px;">
