--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </td>
                     <td align="center" width="160px">
               <center>
-                <span style="font-size:16px"><a href=" ">Andrew Zisserman</a><sup>3</sup></span>
+                <span style="font-size:16px"><a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>3</sup></span>
                 </center>
                 </td>
                     <td align="center" width="160px">
@@ -223,17 +223,7 @@
         </tr></tbody></table>
 	
 			<br>
-			<table align=center width=500px>
-				<tr>
-					<td align=center width=500px>
-						<center>
-							<span style="font-size:22px">
-								<span style="font-size:20px">ECCV 2022</span>
-							</span>
-						</center>
-					</td>
-				</tr>
-			</table>	
+				
 	
 	
       <br><hr>
