--- a/index.html
+++ b/index.html
@@ -169,9 +169,13 @@
 
 <body>
 	<br>
+	<table align="center" width="1000px">
+	<td align="center" width="1000px">
 	<center>
 	<span style="font-size:36px">CounTR: Transformer-based Generalised Visual Counting</span><br><br><br>
 	</center>
+	</td>
+	</table>
 	<table align="center" width="800px">
             <tbody><tr>
                     <td align="center" width="160px">
