--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
 <body>
 	<br>
-	<table align="center" width="900px">
-	<td align="center" width="900px">
+	<table align="left" width="1000px">
+	<td align="center" width="1000px">
 	<center>
 	<span style="font-size:36px">CounTR: Transformer-based Generalised Visual Counting</span><br><br><br>
 	</center>
