--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <body>
 	<br>
-	<table align="center" width="1000px">
+	<table align="left" width="1200px">
 	<td align="left" width="1000px">
 	<center>
 	<span style="font-size:36px">CounTR: Transformer-based Generalised Visual Counting</span><br><br><br>
