--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <center>
                   <br>
                   <span style="font-size:20px">
-                    <a href=" "> Paper </a>
+                    <a href="https://arxiv.org/abs/2208.13721"> Paper </a>
                   </span>
                 </center>
               </td>
