--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	<table align="center" width="900px">
 	<td align="center" width="900px">
 	<center>
-	<p style="text-align: center"><span style="font-size:33px">CounTR: Transformer-based Generalised Visual Counting</span></p><br><br><br>
+	<span style="font-size:33px">CounTR: Transformer-based Generalised Visual Counting</span><br><br><br>
 	</center>
 	</td>
 	</table>
