--- a/index.html
+++ b/index.html
@@ -303,7 +303,10 @@
 
        <p><b> Few-shot Class-specific Counting Result on CARPK Dataset </b> </p>
        <p><img class="center"  src="./resources/CARPK.png" width="800px"></p>	
+       <br><hr>
 	
+       <center><h1>Qualitative Results</h1></center>
+	<p><img class="center"  src="./resources/goodpred.png" width="800px"></p>
 	
 	
 	<br><hr>
