--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 	</center>
 	</td>
 	</table>
+	<span style="font-size:32px">CounTR: Transformer-based Generalised Visual Counting</span>
 	<table align="center" width="800px">
             <tbody><tr>
                     <td align="center" width="160px">
