--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
 <body>
 	<br>
 	<span style="font-size:31px">CounTR: Transformer-based Generalised Visual Counting</span>
+	<br>
+	<br>
 	<table align="center" width="800px">
             <tbody><tr>
                     <td align="center" width="160px">
@@ -286,17 +288,25 @@
        <center><h1>Results</h1></center>
 
        <p><b> Any-shot Class-agnostic Counting Result on FSC-147 Dataset </b> </p>
+	<center>
        <p><img class="center"  src="./resources/FSC147.png" width="750px"></p>
+	</center>
 	
 	<p><b> Ablation Study Result </b> </p>
+	<center>
        <p><img class="center"  src="./resources/ablation.png" width="800px"></p>
+	</center>
 	
        <p><b> Any-shot Class-agnostic Counting Result on Val-COCO and Test-COCO Dataset </b> </p>
+	<center>
        <p><img class="center"  src="./resources/FSCOCO.png" width="700px"></p>
+	</center>
 	
 
        <p><b> Few-shot Class-specific Counting Result on CARPK Dataset </b> </p>
+	<center>
        <p><img class="center"  src="./resources/CARPK.png" width="600px"></p>	
+	</center>
        <br><hr>
 	
        <center><h1>Qualitative Results</h1></center>
