--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 					<td align=center width=500px>
 						<center>
 							<span style="font-size:22px">
-								<span style="font-size:20px"> 2022</span>
+								<span style="font-size:20px">BMVC 2022</span>
 							</span>
 						</center>
 					</td>
