--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 	<br><hr>
       <center> <h1> Acknowledgements </h1> </center>
 	<p>
-	We thank Xiaoman Zhang and Chaoyi Wu for proof-reading.	
+	AZ is supported by EPSRC Programme Grant VisualAI EP/T028572/1, a Royal Society Research Professorship RP\R1\191132.We thank Xiaoman Zhang and Chaoyi Wu for proof-reading.	
 	</p>
   
       <p style="text-align:left;font-size:9px;">
